Add JVM setup details